# ipod-sync

./: .gitignore  README.md  pyproject.toml
ipod_sync/: __init__.py  cli.py  config.py
ipod_sync/daemon/: __main__.py  runner.py
ipod_sync/download/: downloader.py  library.py
ipod_sync/ipod/: detect.py  gpod_ctypes.py  mount.py  sync.py  watcher.py
scripts/: install-mac.sh  install-pi.sh
