[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipod-sync"
version = "0.1.0"
description = "Apple Music library sync to iPod Classic via CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mutagen>=1.47",
    "rich>=13.0",
]

[project.scripts]
ipod-sync = "ipod_sync.cli:cli"

[tool.setuptools.packages.find]
include = ["ipod_sync*"]
